[package]
name = "btree"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
description = "A simple incomplete B-tree implementation"
keywords = ["b-tree"]
categories = ["data-structures"]
license = "MIT"
repository = "https://github.com/Christoph-D/btree"

[dependencies]

[dev-dependencies]
rand = "0.8.5"
